// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-ge-form-renderer form with payment widget, when payment method changed to credit card then payment iframe loads 1`] = `
<iframe
  class="payment-services-iframe"
  data-id="c.commonPaymentServices"
  src="/apex/GE_TokenizeCard"
  title="c.commonPaymentServices"
/>
`;

exports[`c-ge-form-renderer loads with template 1`] = `
<c-ge-form-renderer>
  #shadow-root(open)
    <lightning-layout
      class="ge-form-container slds-p-bottom_medium"
    >
      #shadow-root(open)
        <slot />
      <lightning-layout-item>
        #shadow-root(open)
          <slot />
        <c-util-page-header>
          #shadow-root(open)
            <header
              class="slds-page-header slds-m-bottom_small"
            >
              <div
                class="slds-grid"
              >
                <div
                  class="slds-grid slds-align-middle slds-col slds-has-flexi-truncate"
                >
                  <div
                    class="slds-media slds-no-space"
                  >
                    <div
                      class="slds-media__figure slds-icon"
                    >
                      <lightning-icon>
                        #shadow-root(open)
                      </lightning-icon>
                    </div>
                  </div>
                  <div
                    class="slds-media__body"
                  >
                    <h1>
                      <div
                        class="entityNameTitle slds-line-height_reset"
                      >
                        c.geHeaderSingleGiftEntry
                      </div>
                      <div
                        class="slds-page-header__title slds-m-right--small slds-align-middle fade-text"
                        title="c.commonNewGift"
                      >
                        <span
                          class="uiOutputText"
                        >
                          c.commonNewGift
                        </span>
                      </div>
                    </h1>
                    <slot
                      name="title"
                    />
                  </div>
                </div>
                <div
                  class="slds-col slds-no-flex slds-grid slds-align-top slds-p-bottom_xx-small"
                >
                  <slot
                    name="actions"
                  />
                </div>
              </div>
            </header>
        </c-util-page-header>
      </lightning-layout-item>
      <lightning-layout-item>
        #shadow-root(open)
          <slot />
        <c-ge-review-donations>
          #shadow-root(open)
        </c-ge-review-donations>
      </lightning-layout-item>
      <lightning-layout-item
        class="slds-card slds-p-around_small"
      >
        #shadow-root(open)
          <slot />
        <c-ge-form-section>
          #shadow-root(open)
            <c-util-expandable-section>
              #shadow-root(open)
                <div
                  class="slds-section slds-is-open"
                >
                  <h3
                    class="slds-section__title"
                  >
                    <button
                      aria-controls="[shadow:guid]"
                      aria-expanded="true"
                      class="slds-button slds-section__title-action"
                      data-qa-locator="button Toggle Section Donor Information"
                    >
                      <div
                        class="slds-p-right_small icon-transition icon-transition_is-open"
                      >
                        <lightning-icon>
                          #shadow-root(open)
                        </lightning-icon>
                      </div>
                      <span
                        class="slds-truncate"
                        title="Donor Information"
                      >
                        Donor Information
                      </span>
                    </button>
                  </h3>
                  <div
                    aria-hidden="false"
                    class="section-transition slds-m-bottom_large"
                    id="[shadow:guid]"
                  >
                    <slot />
                  </div>
                </div>
              <lightning-layout>
                #shadow-root(open)
                  <slot />
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-combobox
                          data-id="inputComponent"
                          data-qa-locator="combobox Donor Type"
                        >
                          #shadow-root(open)
                        </lightning-combobox>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-record-edit-form>
                          #shadow-root(open)
                            <slot />
                          <label
                            class="slds-form-element__label"
                          >
                            Existing Donor Organization Account
                          </label>
                          <lightning-input-field
                            class="help-text-hidden"
                            data-id="inputComponent"
                            data-qa-locator="autocomplete Existing Donor Organization Account"
                          >
                            #shadow-root(open)
                          </lightning-input-field>
                        </lightning-record-edit-form>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-record-edit-form>
                          #shadow-root(open)
                            <slot />
                          <label
                            class="slds-form-element__label"
                          >
                            Existing Donor Contact
                          </label>
                          <lightning-input-field
                            class="help-text-hidden"
                            data-id="inputComponent"
                            data-qa-locator="autocomplete Existing Donor Contact"
                          >
                            #shadow-root(open)
                          </lightning-input-field>
                        </lightning-record-edit-form>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <c-ge-form-widget>
                    #shadow-root(open)
                      <c-ge-form-widget-tokenize-card
                        data-id="widgetComponent"
                      >
                        #shadow-root(open)
                          <lightning-layout>
                            #shadow-root(open)
                              <slot />
                            <lightning-layout-item>
                              #shadow-root(open)
                                <slot />
                              <article
                                class="credit-card-container slds-m-top_small"
                              >
                                <lightning-layout>
                                  #shadow-root(open)
                                    <slot />
                                  <lightning-layout-item>
                                    #shadow-root(open)
                                      <slot />
                                    <div
                                      class="credit-card-header slds-p-vertical_small slds-p-horizontal_x-small"
                                    >
                                      <lightning-layout>
                                        #shadow-root(open)
                                          <slot />
                                        <lightning-layout-item>
                                          #shadow-root(open)
                                            <slot />
                                          <h1
                                            class="slds-text-body_regular"
                                          >
                                            c.commonPaymentServices
                                          </h1>
                                        </lightning-layout-item>
                                        <lightning-layout-item>
                                          #shadow-root(open)
                                            <slot />
                                        </lightning-layout-item>
                                      </lightning-layout>
                                    </div>
                                  </lightning-layout-item>
                                  <lightning-layout-item>
                                    #shadow-root(open)
                                      <slot />
                                    <p
                                      class="slds-content-message slds-p-vertical_medium"
                                    >
                                      c.geBodyPaymentNotProcessingTransaction c.psSelectValidPaymentMethod
                                    </p>
                                  </lightning-layout-item>
                                </lightning-layout>
                              </article>
                            </lightning-layout-item>
                          </lightning-layout>
                      </c-ge-form-widget-tokenize-card>
                  </c-ge-form-widget>
                </lightning-layout-item>
              </lightning-layout>
            </c-util-expandable-section>
        </c-ge-form-section>
        <c-ge-form-section>
          #shadow-root(open)
            <c-util-expandable-section>
              #shadow-root(open)
                <div
                  class="slds-section slds-is-open"
                >
                  <h3
                    class="slds-section__title"
                  >
                    <button
                      aria-controls="[shadow:guid]"
                      aria-expanded="true"
                      class="slds-button slds-section__title-action"
                      data-qa-locator="button Toggle Section Add or Edit Organization Account"
                    >
                      <div
                        class="slds-p-right_small icon-transition icon-transition_is-open"
                      >
                        <lightning-icon>
                          #shadow-root(open)
                        </lightning-icon>
                      </div>
                      <span
                        class="slds-truncate"
                        title="Add or Edit Organization Account"
                      >
                        Add or Edit Organization Account
                      </span>
                    </button>
                  </h3>
                  <div
                    aria-hidden="false"
                    class="section-transition slds-m-bottom_large"
                    id="[shadow:guid]"
                  >
                    <slot />
                  </div>
                </div>
              <lightning-layout>
                #shadow-root(open)
                  <slot />
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Organization Account City"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Organization Account State/Province"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Organization Account Zip/Postal Code"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Organization Account Country"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
              </lightning-layout>
            </c-util-expandable-section>
        </c-ge-form-section>
        <c-ge-form-section>
          #shadow-root(open)
            <c-util-expandable-section>
              #shadow-root(open)
                <div
                  class="slds-section slds-is-open"
                >
                  <h3
                    class="slds-section__title"
                  >
                    <button
                      aria-controls="[shadow:guid]"
                      aria-expanded="true"
                      class="slds-button slds-section__title-action"
                      data-qa-locator="button Toggle Section Add or Edit Contact"
                    >
                      <div
                        class="slds-p-right_small icon-transition icon-transition_is-open"
                      >
                        <lightning-icon>
                          #shadow-root(open)
                        </lightning-icon>
                      </div>
                      <span
                        class="slds-truncate"
                        title="Add or Edit Contact"
                      >
                        Add or Edit Contact
                      </span>
                    </button>
                  </h3>
                  <div
                    aria-hidden="false"
                    class="section-transition slds-m-bottom_large"
                    id="[shadow:guid]"
                  >
                    <slot />
                  </div>
                </div>
              <lightning-layout>
                #shadow-root(open)
                  <slot />
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Contact Personal Email"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-combobox
                          data-id="inputComponent"
                          data-qa-locator="combobox Contact Preferred Email"
                        >
                          #shadow-root(open)
                        </lightning-combobox>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Contact Street"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Contact City"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Contact State/Province"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Contact Zip/Postal Code"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Contact Country"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
              </lightning-layout>
            </c-util-expandable-section>
        </c-ge-form-section>
        <c-ge-form-section>
          #shadow-root(open)
            <c-util-expandable-section>
              #shadow-root(open)
                <div
                  class="slds-section slds-is-open"
                >
                  <h3
                    class="slds-section__title"
                  >
                    <button
                      aria-controls="[shadow:guid]"
                      aria-expanded="true"
                      class="slds-button slds-section__title-action"
                      data-qa-locator="button Toggle Section Donation Information"
                    >
                      <div
                        class="slds-p-right_small icon-transition icon-transition_is-open"
                      >
                        <lightning-icon>
                          #shadow-root(open)
                        </lightning-icon>
                      </div>
                      <span
                        class="slds-truncate"
                        title="Donation Information"
                      >
                        Donation Information
                      </span>
                    </button>
                  </h3>
                  <div
                    aria-hidden="false"
                    class="section-transition slds-m-bottom_large"
                    id="[shadow:guid]"
                  >
                    <slot />
                  </div>
                </div>
              <lightning-layout>
                #shadow-root(open)
                  <slot />
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="datetime Donation Date"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Donation Amount"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-record-edit-form>
                          #shadow-root(open)
                            <slot />
                          <label
                            class="slds-form-element__label"
                          >
                            Primary Campaign Source
                          </label>
                          <lightning-input-field
                            class="help-text-hidden"
                            data-id="inputComponent"
                            data-qa-locator="autocomplete Primary Campaign Source"
                          >
                            #shadow-root(open)
                          </lightning-input-field>
                        </lightning-record-edit-form>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-combobox
                          data-id="inputComponent"
                          data-qa-locator="combobox Payment Method"
                        >
                          #shadow-root(open)
                        </lightning-combobox>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Check/Reference Number"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <c-ge-form-widget>
                    #shadow-root(open)
                      <c-ge-form-widget-allocation
                        data-id="widgetComponent"
                      >
                        #shadow-root(open)
                          <lightning-layout
                            class="slds-p-top--medium slds-m-top--medium"
                          >
                            #shadow-root(open)
                              <slot />
                            <lightning-layout-item>
                              #shadow-root(open)
                                <slot />
                              <lightning-button
                                data-qa-locator="button c.geAddNewAllocation"
                              >
                                #shadow-root(open)
                              </lightning-button>
                            </lightning-layout-item>
                          </lightning-layout>
                      </c-ge-form-widget-allocation>
                  </c-ge-form-widget>
                </lightning-layout-item>
              </lightning-layout>
            </c-util-expandable-section>
        </c-ge-form-section>
        <lightning-layout>
          #shadow-root(open)
            <slot />
          <lightning-layout-item>
            #shadow-root(open)
              <slot />
            <p
              class="slds-align_absolute-center slds-p-top_small"
            >
              c.geTextPaymentsSaveNotice
            </p>
          </lightning-layout-item>
          <lightning-layout-item>
            #shadow-root(open)
              <slot />
            <div
              class="slds-align_absolute-center slds-p-vertical_small"
            >
              <lightning-button
                class="slds-m-left_x-small"
                data-qa-locator="button c.commonCancel"
                title="c.commonCancel"
              >
                #shadow-root(open)
              </lightning-button>
              <lightning-button
                class="slds-m-left_x-small"
                data-qa-locator="button c.commonSave"
                title="c.commonSave"
              >
                #shadow-root(open)
              </lightning-button>
            </div>
          </lightning-layout-item>
        </lightning-layout>
      </lightning-layout-item>
    </lightning-layout>
</c-ge-form-renderer>
`;

exports[`c-ge-form-renderer saving without filling anything in should result in a page level error for missing fields 1`] = `
<c-ge-form-renderer>
  #shadow-root(open)
    <lightning-layout
      class="ge-form-container slds-p-bottom_medium"
    >
      #shadow-root(open)
        <slot />
      <lightning-layout-item>
        #shadow-root(open)
          <slot />
        <c-util-page-header>
          #shadow-root(open)
            <header
              class="slds-page-header slds-m-bottom_small"
            >
              <div
                class="slds-grid"
              >
                <div
                  class="slds-grid slds-align-middle slds-col slds-has-flexi-truncate"
                >
                  <div
                    class="slds-media slds-no-space"
                  >
                    <div
                      class="slds-media__figure slds-icon"
                    >
                      <lightning-icon>
                        #shadow-root(open)
                      </lightning-icon>
                    </div>
                  </div>
                  <div
                    class="slds-media__body"
                  >
                    <h1>
                      <div
                        class="entityNameTitle slds-line-height_reset"
                      >
                        c.geHeaderSingleGiftEntry
                      </div>
                      <div
                        class="slds-page-header__title slds-m-right--small slds-align-middle fade-text"
                        title="c.commonNewGift"
                      >
                        <span
                          class="uiOutputText"
                        >
                          c.commonNewGift
                        </span>
                      </div>
                    </h1>
                    <slot
                      name="title"
                    />
                  </div>
                </div>
                <div
                  class="slds-col slds-no-flex slds-grid slds-align-top slds-p-bottom_xx-small"
                >
                  <slot
                    name="actions"
                  />
                </div>
              </div>
            </header>
        </c-util-page-header>
      </lightning-layout-item>
      <lightning-layout-item>
        #shadow-root(open)
          <slot />
        <c-ge-review-donations>
          #shadow-root(open)
        </c-ge-review-donations>
      </lightning-layout-item>
      <lightning-layout-item
        class="slds-card slds-p-around_small"
      >
        #shadow-root(open)
          <slot />
        <c-util-page-level-message>
          #shadow-root(open)
            <div
              class="pageLevelErrors"
              tabindex="-1"
            >
              <div
                aria-live="assertive"
                class="desktop forcePageError"
              >
                <div
                  class="slds-notify_container slds-notify_container_extension slds-is-relative slds-m-bottom_xx-small"
                >
                  <div
                    class="slds-notify slds-notify_extension slds-notify_toast slds-theme_error"
                    role="status"
                  >
                    <span
                      class="slds-assistive-text"
                    >
                      c.commonAssistiveError
                    </span>
                    <div
                      class="slds-notify__content"
                    >
                      <h2
                        class="slds-text-heading_small"
                      >
                        c.commonError
                      </h2>
                    </div>
                  </div>
                </div>
                <slot
                  name="body"
                />
              </div>
            </div>
          <ul
            class="slds-list_dotted slds-text-color_error"
            slot="body"
          >
            <li>
              <p>
                The following fields are required: Donor Type, Donation Date, Donation Amount
              </p>
            </li>
          </ul>
        </c-util-page-level-message>
        <c-ge-form-section>
          #shadow-root(open)
            <c-util-expandable-section>
              #shadow-root(open)
                <div
                  class="slds-section slds-is-open"
                >
                  <h3
                    class="slds-section__title"
                  >
                    <button
                      aria-controls="[shadow:guid]"
                      aria-expanded="true"
                      class="slds-button slds-section__title-action"
                      data-qa-locator="button Toggle Section Donor Information"
                    >
                      <div
                        class="slds-p-right_small icon-transition icon-transition_is-open"
                      >
                        <lightning-icon>
                          #shadow-root(open)
                        </lightning-icon>
                      </div>
                      <span
                        class="slds-truncate"
                        title="Donor Information"
                      >
                        Donor Information
                      </span>
                    </button>
                  </h3>
                  <div
                    aria-hidden="false"
                    class="section-transition slds-m-bottom_large"
                    id="[shadow:guid]"
                  >
                    <slot />
                  </div>
                </div>
              <lightning-layout>
                #shadow-root(open)
                  <slot />
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-combobox
                          data-id="inputComponent"
                          data-qa-locator="combobox Donor Type"
                        >
                          #shadow-root(open)
                        </lightning-combobox>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-record-edit-form>
                          #shadow-root(open)
                            <slot />
                          <label
                            class="slds-form-element__label"
                          >
                            Existing Donor Organization Account
                          </label>
                          <lightning-input-field
                            class="help-text-hidden"
                            data-id="inputComponent"
                            data-qa-locator="autocomplete Existing Donor Organization Account"
                          >
                            #shadow-root(open)
                          </lightning-input-field>
                        </lightning-record-edit-form>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-record-edit-form>
                          #shadow-root(open)
                            <slot />
                          <label
                            class="slds-form-element__label"
                          >
                            Existing Donor Contact
                          </label>
                          <lightning-input-field
                            class="help-text-hidden"
                            data-id="inputComponent"
                            data-qa-locator="autocomplete Existing Donor Contact"
                          >
                            #shadow-root(open)
                          </lightning-input-field>
                        </lightning-record-edit-form>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <c-ge-form-widget>
                    #shadow-root(open)
                      <c-ge-form-widget-tokenize-card
                        data-id="widgetComponent"
                      >
                        #shadow-root(open)
                          <lightning-layout>
                            #shadow-root(open)
                              <slot />
                            <lightning-layout-item>
                              #shadow-root(open)
                                <slot />
                              <article
                                class="credit-card-container slds-m-top_small"
                              >
                                <lightning-layout>
                                  #shadow-root(open)
                                    <slot />
                                  <lightning-layout-item>
                                    #shadow-root(open)
                                      <slot />
                                    <div
                                      class="credit-card-header slds-p-vertical_small slds-p-horizontal_x-small"
                                    >
                                      <lightning-layout>
                                        #shadow-root(open)
                                          <slot />
                                        <lightning-layout-item>
                                          #shadow-root(open)
                                            <slot />
                                          <h1
                                            class="slds-text-body_regular"
                                          >
                                            c.commonPaymentServices
                                          </h1>
                                        </lightning-layout-item>
                                        <lightning-layout-item>
                                          #shadow-root(open)
                                            <slot />
                                        </lightning-layout-item>
                                      </lightning-layout>
                                    </div>
                                  </lightning-layout-item>
                                  <lightning-layout-item>
                                    #shadow-root(open)
                                      <slot />
                                    <p
                                      class="slds-content-message slds-p-vertical_medium"
                                    >
                                      c.geBodyPaymentNotProcessingTransaction c.psSelectValidPaymentMethod
                                    </p>
                                  </lightning-layout-item>
                                </lightning-layout>
                              </article>
                            </lightning-layout-item>
                          </lightning-layout>
                      </c-ge-form-widget-tokenize-card>
                  </c-ge-form-widget>
                </lightning-layout-item>
              </lightning-layout>
            </c-util-expandable-section>
        </c-ge-form-section>
        <c-ge-form-section>
          #shadow-root(open)
            <c-util-expandable-section>
              #shadow-root(open)
                <div
                  class="slds-section slds-is-open"
                >
                  <h3
                    class="slds-section__title"
                  >
                    <button
                      aria-controls="[shadow:guid]"
                      aria-expanded="true"
                      class="slds-button slds-section__title-action"
                      data-qa-locator="button Toggle Section Add or Edit Organization Account"
                    >
                      <div
                        class="slds-p-right_small icon-transition icon-transition_is-open"
                      >
                        <lightning-icon>
                          #shadow-root(open)
                        </lightning-icon>
                      </div>
                      <span
                        class="slds-truncate"
                        title="Add or Edit Organization Account"
                      >
                        Add or Edit Organization Account
                      </span>
                    </button>
                  </h3>
                  <div
                    aria-hidden="false"
                    class="section-transition slds-m-bottom_large"
                    id="[shadow:guid]"
                  >
                    <slot />
                  </div>
                </div>
              <lightning-layout>
                #shadow-root(open)
                  <slot />
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Organization Account City"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Organization Account State/Province"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Organization Account Zip/Postal Code"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Organization Account Country"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
              </lightning-layout>
            </c-util-expandable-section>
        </c-ge-form-section>
        <c-ge-form-section>
          #shadow-root(open)
            <c-util-expandable-section>
              #shadow-root(open)
                <div
                  class="slds-section slds-is-open"
                >
                  <h3
                    class="slds-section__title"
                  >
                    <button
                      aria-controls="[shadow:guid]"
                      aria-expanded="true"
                      class="slds-button slds-section__title-action"
                      data-qa-locator="button Toggle Section Add or Edit Contact"
                    >
                      <div
                        class="slds-p-right_small icon-transition icon-transition_is-open"
                      >
                        <lightning-icon>
                          #shadow-root(open)
                        </lightning-icon>
                      </div>
                      <span
                        class="slds-truncate"
                        title="Add or Edit Contact"
                      >
                        Add or Edit Contact
                      </span>
                    </button>
                  </h3>
                  <div
                    aria-hidden="false"
                    class="section-transition slds-m-bottom_large"
                    id="[shadow:guid]"
                  >
                    <slot />
                  </div>
                </div>
              <lightning-layout>
                #shadow-root(open)
                  <slot />
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Contact Personal Email"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-combobox
                          data-id="inputComponent"
                          data-qa-locator="combobox Contact Preferred Email"
                        >
                          #shadow-root(open)
                        </lightning-combobox>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Contact Street"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Contact City"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Contact State/Province"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Contact Zip/Postal Code"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Contact Country"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
              </lightning-layout>
            </c-util-expandable-section>
        </c-ge-form-section>
        <c-ge-form-section>
          #shadow-root(open)
            <c-util-expandable-section>
              #shadow-root(open)
                <div
                  class="slds-section slds-is-open"
                >
                  <h3
                    class="slds-section__title"
                  >
                    <button
                      aria-controls="[shadow:guid]"
                      aria-expanded="true"
                      class="slds-button slds-section__title-action"
                      data-qa-locator="button Toggle Section Donation Information"
                    >
                      <div
                        class="slds-p-right_small icon-transition icon-transition_is-open"
                      >
                        <lightning-icon>
                          #shadow-root(open)
                        </lightning-icon>
                      </div>
                      <span
                        class="slds-truncate"
                        title="Donation Information"
                      >
                        Donation Information
                      </span>
                    </button>
                  </h3>
                  <div
                    aria-hidden="false"
                    class="section-transition slds-m-bottom_large"
                    id="[shadow:guid]"
                  >
                    <slot />
                  </div>
                </div>
              <lightning-layout>
                #shadow-root(open)
                  <slot />
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="datetime Donation Date"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Donation Amount"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-record-edit-form>
                          #shadow-root(open)
                            <slot />
                          <label
                            class="slds-form-element__label"
                          >
                            Primary Campaign Source
                          </label>
                          <lightning-input-field
                            class="help-text-hidden"
                            data-id="inputComponent"
                            data-qa-locator="autocomplete Primary Campaign Source"
                          >
                            #shadow-root(open)
                          </lightning-input-field>
                        </lightning-record-edit-form>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-combobox
                          data-id="inputComponent"
                          data-qa-locator="combobox Payment Method"
                        >
                          #shadow-root(open)
                        </lightning-combobox>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <article
                    class="slds-p-horizontal_small slds-p-vertical_xx-small"
                  >
                    <c-ge-form-field>
                      #shadow-root(open)
                        <lightning-input
                          data-id="inputComponent"
                          data-qa-locator="input Check/Reference Number"
                        >
                          #shadow-root(open)
                        </lightning-input>
                    </c-ge-form-field>
                  </article>
                </lightning-layout-item>
                <lightning-layout-item>
                  #shadow-root(open)
                    <slot />
                  <c-ge-form-widget>
                    #shadow-root(open)
                      <c-ge-form-widget-allocation
                        data-id="widgetComponent"
                      >
                        #shadow-root(open)
                          <lightning-layout
                            class="slds-p-top--medium slds-m-top--medium"
                          >
                            #shadow-root(open)
                              <slot />
                            <lightning-layout-item>
                              #shadow-root(open)
                                <slot />
                              <lightning-button
                                data-qa-locator="button c.geAddNewAllocation"
                              >
                                #shadow-root(open)
                              </lightning-button>
                            </lightning-layout-item>
                          </lightning-layout>
                      </c-ge-form-widget-allocation>
                  </c-ge-form-widget>
                </lightning-layout-item>
              </lightning-layout>
            </c-util-expandable-section>
        </c-ge-form-section>
        <lightning-layout>
          #shadow-root(open)
            <slot />
          <lightning-layout-item>
            #shadow-root(open)
              <slot />
            <p
              class="slds-align_absolute-center slds-p-top_small"
            >
              c.geTextPaymentsSaveNotice
            </p>
          </lightning-layout-item>
          <lightning-layout-item>
            #shadow-root(open)
              <slot />
            <div
              class="slds-align_absolute-center slds-p-vertical_small"
            >
              <lightning-button
                class="slds-m-left_x-small"
                data-qa-locator="button c.commonCancel"
                title="c.commonCancel"
              >
                #shadow-root(open)
              </lightning-button>
              <lightning-button
                class="slds-m-left_x-small"
                data-qa-locator="button c.commonSave"
                title="c.commonSave"
              >
                #shadow-root(open)
              </lightning-button>
            </div>
          </lightning-layout-item>
        </lightning-layout>
      </lightning-layout-item>
    </lightning-layout>
</c-ge-form-renderer>
`;
